--- a/map/src/main/res/layout/fragment_map.xml
+++ b/map/src/main/res/layout/fragment_map.xml
@@ -70,6 +70,10 @@
         android:background="#11000000"
         tools:ignore="HardcodedText">
 
+        <com.jacekpietras.zoo.map.MapView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
