--- a/map/src/main/res/layout/fragment_map.xml
+++ b/map/src/main/res/layout/fragment_map.xml
@@ -71,6 +71,7 @@
         tools:ignore="HardcodedText">
 
         <com.jacekpietras.zoo.map.MapView
+            android:id="@+id/mapView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
