--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_map"
-        android:name="com.jacekpietras.zoo.map.MapFragment"
+        android:name="com.jacekpietras.zoo.map.ui.MapFragment"
         android:label="@string/title_map"
         tools:layout="@layout/fragment_map" />
 
