--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Theme.ZOO" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
         <!-- Primary brand color. -->
@@ -10,6 +11,14 @@
         <item name="colorSecondary">@color/main_green</item>
         <item name="colorSecondaryVariant">@color/main_green</item>
         <item name="colorOnSecondary">@color/black</item>
+
+        <!-- Map Colors -->
+        <item name="colorMapBackground">#121a26</item>
+        <item name="colorMapBuilding">#0E141E</item>
+        <item name="colorMapBuildingBorder">#080C12</item>
+        <item name="colorMapRoute">#2f3a47</item>
+        <item name="colorMapRouteBorder">#0E141E</item>
+        <item name="colorMapTaken">?colorPrimary</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
