--- a/data/src/cracow_zoo/res/xml/map.xml
+++ b/data/src/cracow_zoo/res/xml/map.xml
@@ -10,42 +10,56 @@
     enable-background="new 0 0 1129.359 718.41"
     xml:space="preserve">
 <g id="regions">
-	<polygon opacity="0.5" fill="#69BD45" points="728.188,242.542 734.688,259.5 766.125,245.208 
+	<polygon opacity="0.5" fill="#69BD45"  points="728.188,242.542 734.688,259.5 766.125,245.208 
 		757.688,228.938 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="730.625,238.188 708.5,239.542 714.167,264.208 
+    <polygon opacity="0.5" fill="#69BD45"  points="730.625,238.188 708.5,239.542 714.167,264.208 
 		738.521,253.508 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="708.5,239.542 686.188,247.163 697.917,271.192 
+    <polygon opacity="0.5" fill="#69BD45"  points="708.5,239.542 686.188,247.163 697.917,271.192 
 		718.223,262.427 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="703.102,259.543 679.097,269.955 688.421,293.039 
+    <polygon opacity="0.5" fill="#69BD45"  points="703.102,259.543 679.097,269.955 688.421,293.039 
 		723.199,276.291 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="694.833,243.705 672.091,252.8 675.085,262 
+    <polygon opacity="0.5" fill="#69BD45"  points="694.833,243.705 672.091,252.8 675.085,262 
 		688.667,267.25 704.751,260.711 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="662.224,231.014 602.555,254.537 611.617,269.123 
+    <polygon opacity="0.5" fill="#69BD45"  points="662.224,231.014 602.555,254.537 611.617,269.123 
 		656.917,251.103 670.333,261.131 681.25,251.833 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="604.68,264.208 667.482,239.122 689.516,275.511 
+    <polygon opacity="0.5" fill="#69BD45"  points="604.68,264.208 667.482,239.122 689.516,275.511 
 		624.628,307.955 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="568.514,281.289 596.305,269.681 602.06,296.897 
+    <polygon opacity="0.5" fill="#69BD45"  points="568.514,281.289 596.305,269.681 602.06,296.897 
 		575.65,296.516 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="557.655,275.625 529.292,291 532.917,305.458 
+    <polygon opacity="0.5" fill="#69BD45"  points="557.655,275.625 529.292,291 532.917,305.458 
 		568.167,301.292 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="486.75,301.863 531.621,289.738 536.014,305.458 
+    <polygon opacity="0.5" fill="#69BD45"  points="486.75,301.863 531.621,289.738 536.014,305.458 
 		496.667,320.208 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="409.167,327.625 485.372,298.208 500.504,320.573 
+    <polygon opacity="0.5" fill="#69BD45"  points="409.167,327.625 485.372,298.208 500.504,320.573 
 		424.833,356.813 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="426.833,339.708 442.5,375.087 467.167,378.784 
+    <polygon opacity="0.5" fill="#69BD45"  points="426.833,339.708 442.5,375.087 467.167,378.784 
 		528.5,351.601 496.333,312.421 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="536.013,295.811 511.223,306.68 530.333,349.375 
+    <polygon opacity="0.5" fill="#69BD45"  points="536.013,295.811 511.223,306.68 530.333,349.375 
 		564.716,337.313 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="477.667,483.862 517.196,444.185 594,427.227 
+    <polygon opacity="0.5" fill="#69BD45"  points="477.667,483.862 517.196,444.185 594,427.227 
 		609.535,457.276 546.113,520 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="702.706,180.675 730.233,185.843 734.708,166.468 
+    <polygon opacity="0.5" fill="#69BD45"  points="702.706,180.675 730.233,185.843 734.708,166.468 
 		706.682,162.175 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="564.68,268.576 577.262,264.208 583.451,276 
+    <polygon opacity="0.5" fill="#69BD45"  points="564.68,268.576 577.262,264.208 583.451,276 
 		569.833,280.745 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="734.688,259.5 740.872,270.622 772.263,255.478 
+    <polygon opacity="0.5" fill="#69BD45"  points="734.688,259.5 740.872,270.622 772.263,255.478 
 		766.125,245.208 	"/>
-    <polygon opacity="0.5" fill="#69BD45" points="589.805,274.518 612.46,264.208 625.813,295.393 
+    <polygon opacity="0.5" fill="#69BD45"  points="589.805,274.518 612.46,264.208 625.813,295.393 
 		595.492,295.811 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="456.055,375.83 488.525,363.58 520.055,420.83 494.43,432.49 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="485.467,363.004 500.833,393.2 543.5,375.955 530.43,339.46 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="497.68,389.189 543.601,370.955 563.805,399.846 517.399,422.038 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="528.155,339.023 537.729,359.941 568.762,348.077 557.002,325.752 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="537.94,361.58 571.68,347.205 593.961,385.097 556.18,402.096 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="556.555,332.455 571.555,364.498 594.68,357.383 574.93,321.308 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="588.141,387.716 609.68,377.633 596.18,356.813 577.805,365.58 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="574.555,319.593 593.974,312.421 627.305,370.955 603.079,380.723 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="623.305,299.67 633.893,326.732 665.65,317.554 649.012,287.557 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="591.959,313.165 624.011,298.577 636.756,326.732 604.68,341.455 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="605.43,342.58 635.363,329.165 653.74,359.205 623.305,371.83 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="640.474,331.697 667.216,321.165 679.775,349.375 653.74,360.455 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="644.063,289.676 653.35,309.447 676.188,303.839 663.438,281.011 	"/>
+    <polygon opacity="0.5" fill="#69BD45" points="367.68,416.4 416.18,390.762 459.346,398.943 491.846,436.701 465.436,465.705 	"/>
 </g>
     <g id="strange" display="none">
 	
@@ -385,9 +399,23 @@
         <text transform="matrix(1 0 0 1 568.9395 271.1924)" font-family="'MyriadPro-Regular'" font-size="4">wc-2</text>
         <text transform="matrix(1 0 0 1 756.6875 256.6045)" font-family="'MyriadPro-Regular'" font-size="4">wyjscie</text>
         <text transform="matrix(1 0 0 1 601.7676 282.3882)" font-family="'MyriadPro-Regular'" font-size="4">ptaki-wodne-maly-staw</text>
+        <text transform="matrix(1 0 0 1 488.5254 393.9121)" font-family="'MyriadPro-Regular'" font-size="4">wielblady-i-gwanko</text>
+        <text transform="matrix(1 0 0 1 527.2139 369.7539)" font-family="'MyriadPro-Regular'" font-size="4">kob-sniady</text>
+        <text transform="matrix(1 0 0 1 539.4668 393.9121)" font-family="'MyriadPro-Regular'" font-size="4">eland</text>
+        <text transform="matrix(1 0 0 1 548.4585 350.5977)" font-family="'MyriadPro-Regular'" font-size="4">pingwiny</text>
+        <text transform="matrix(1 0 0 1 563.1094 381.7539)" font-family="'MyriadPro-Regular'" font-size="4">kangury-i-strusie-emu</text>
+        <text transform="matrix(1 0 0 1 590.1797 374.377)" font-family="'MyriadPro-Regular'" font-size="4">addaks</text>
+        <text transform="matrix(1 0 0 1 574.1123 348.2539)" font-family="'MyriadPro-Regular'" font-size="4">takin-miszmi</text>
+        <text transform="matrix(1 0 0 1 597.1504 338.5566)" font-family="'MyriadPro-Regular'" font-size="4">renifer</text>
+        <text transform="matrix(1 0 0 1 615.25 324.041)" font-family="'MyriadPro-Regular'" font-size="4">sitatunga</text>
+        <text transform="matrix(1 0 0 1 639.1387 351.7622)" font-family="'MyriadPro-Regular'" font-size="4">kob-liczi</text>
+        <text transform="matrix(1 0 0 1 639.1387 312.3501)" font-family="'MyriadPro-Regular'" font-size="4">uchatka-patagonska</text>
+        <text transform="matrix(1 0 0 1 662.2344 300.5181)" font-family="'MyriadPro-Regular'" font-size="4">panda-mala</text>
+        <text transform="matrix(1 0 0 1 667.2158 339.46)" font-family="'MyriadPro-Regular'" font-size="4">arui</text>
 </g>
     <g id="coords" display="none">
 	<text transform="matrix(1 0 0 1 6.2051 21.5215)" display="inline" font-family="'MyriadPro-Regular'" font-size="17.4789">50.05787, 19.84128</text>
         <text transform="matrix(1 0 0 1 6.2051 44.8271)" display="inline" font-family="'MyriadPro-Regular'" font-size="17.4789">50.04996, 19.86057</text>
 </g>
+    <text transform="matrix(1 0 0 1 432.3589 431.7461)" font-family="'MyriadPro-Regular'" font-size="4">zyrafy</text>
 </svg>
