--- a/presentation-map/src/main/res/layout/fragment_map.xml
+++ b/presentation-map/src/main/res/layout/fragment_map.xml
@@ -29,6 +29,14 @@
             android:textAppearance="?textAppearanceBody1"
             android:textColor="?colorOnSurface" />
 
+        <TextView
+            android:id="@+id/animals"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAppearance="?textAppearanceBody1"
+            android:textColor="?colorOnSurface" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
