--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/catalogue_graph"
+        android:id="@+id/graph_catalogue"
         android:icon="@drawable/ic_elephant_24"
         android:title="@string/title_catalogue" />
 
     <item
-        android:id="@+id/navigation_map"
+        android:id="@+id/graph_map"
         android:icon="@drawable/ic_map_24"
         android:title="@string/title_map" />
 
