--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,20 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_map">
+    app:startDestination="@+id/graph_map">
 
-    <fragment
-        android:id="@+id/navigation_map"
-        android:name="com.jacekpietras.zoo.map.ui.MapFragment"
-        android:label="@string/title_map"
-        tools:layout="@layout/fragment_map" />
+    <include app:graph="@navigation/graph_catalogue" />
+
+    <include app:graph="@navigation/graph_map" />
 
     <fragment
         android:id="@+id/navigation_planner"
         android:name="com.jacekpietras.zoo.planner.PlannerFragment"
         android:label="@string/title_planner"
         tools:layout="@layout/fragment_planner" />
-
-    <include app:graph="@navigation/catalogue_graph" />
-
 </navigation>
