trans-module navigation

--- a/presentation-map/src/main/res/navigation/graph_map.xml
+++ b/presentation-map/src/main/res/navigation/graph_map.xml
@@ -13,6 +13,7 @@
 
         <argument
             android:name="animalId"
+            android:defaultValue="null"
             app:argType="string"
             app:nullable="true" />
     </fragment>
