we can see something in composable map

--- a/presentation-map/src/main/res/navigation/graph_map.xml
+++ b/presentation-map/src/main/res/navigation/graph_map.xml
@@ -6,10 +6,30 @@
 
     <fragment
         android:id="@+id/fragment_map"
-        android:name="com.jacekpietras.zoo.map.ui.MapFragment"
+        android:name="com.jacekpietras.zoo.map.ui.ComposableMapFragment"
         android:label="@string/title_map">
 
         <deepLink app:uri="zoo://fragmentMap?animalId={animalId}&amp;regionId={regionId}"/>
+
+        <argument
+            android:name="animalId"
+            android:defaultValue="null"
+            app:argType="string"
+            app:nullable="true" />
+
+        <argument
+            android:name="regionId"
+            android:defaultValue="null"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/old_fragment_map"
+        android:name="com.jacekpietras.zoo.map.ui.MapFragment"
+        android:label="@string/title_map">
+
+        <deepLink app:uri="zoo://oldFragmentMap?animalId={animalId}&amp;regionId={regionId}"/>
 
         <argument
             android:name="animalId"
