--- a/presentation-map/src/main/res/navigation/graph_map.xml
+++ b/presentation-map/src/main/res/navigation/graph_map.xml
@@ -22,6 +22,10 @@
             android:defaultValue="null"
             app:argType="string"
             app:nullable="true" />
+
+        <action
+            android:id="@+id/navigateToCamera"
+            app:destination="@id/camera"/>
     </fragment>
 
     <fragment
@@ -43,4 +47,9 @@
             app:argType="string"
             app:nullable="true" />
     </fragment>
+
+    <activity
+        android:id="@+id/camera"
+        app:action="android.media.action.IMAGE_CAPTURE" />
+
 </navigation>
