--- a/presentation-map/src/main/res/navigation/graph_map.xml
+++ b/presentation-map/src/main/res/navigation/graph_map.xml
@@ -26,6 +26,10 @@
         <action
             android:id="@+id/navigateToCamera"
             app:destination="@id/camera"/>
+
+        <action
+            android:id="@+id/navigateToAnimalList"
+            app:destination="@id/camera"/>
     </fragment>
 
     <fragment
