--- a/data/src/cracow_zoo/res/xml/map.xml
+++ b/data/src/cracow_zoo/res/xml/map.xml
@@ -611,7 +611,7 @@
         <text transform="matrix(1 0 0 1 454.835 351.6006)" font-family="'MyriadPro-Regular'" font-size="4">tapiry-strusie-zebry</text>
         <text transform="matrix(1 0 0 1 526.5811 326.9912)" font-family="'MyriadPro-Regular'" font-size="4">male-drapiezniki</text>
         <text transform="matrix(1 0 0 1 506 474.042)" font-family="'MyriadPro-Regular'" font-size="4">wielkie-koty</text>
-        <text transform="matrix(1 0 0 1 708.5 167.792)" font-family="'MyriadPro-Regular'" font-size="4">wc_1</text>
+        <text transform="matrix(1 0 0 1 708.5 167.792)" font-family="'MyriadPro-Regular'" font-size="4">wc-1</text>
         <text transform="matrix(1 0 0 1 568.9395 271.1924)" font-family="'MyriadPro-Regular'" font-size="4">wc-2</text>
         <text transform="matrix(1 0 0 1 756.6875 256.6045)" font-family="'MyriadPro-Regular'" font-size="4">wyjscie</text>
         <text transform="matrix(1 0 0 1 601.7676 282.3887)" font-family="'MyriadPro-Regular'" font-size="4">ptaki-wodne-maly-staw</text>
