--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,8 +16,9 @@
         <item name="colorMapBackground">#f8f9fa</item>
         <item name="colorMapBuilding">#f1f3f4</item>
         <item name="colorMapBuildingBorder">#D7DBDD</item>
-        <item name="colorMapRoute">#ffffff</item>
-        <item name="colorMapRouteBorder">#D7DBDD</item>
+        <item name="colorMapRoad">#ffffff</item>
+        <item name="colorMapRoadVisited">#D1FAE1</item>
+        <item name="colorMapRoadBorder">#D7DBDD</item>
         <item name="colorMapTaken">?colorPrimary</item>
         <item name="colorMapTechnical">#FFC9C9</item>
         <item name="colorMapTechnicalBorder">#D7DBDD</item>
