animal position on map

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,6 +26,7 @@
         <item name="colorSmallMapBackground">#6AAE86</item>
         <item name="colorSmallMapBuilding">#5F7A6A</item>
         <item name="colorSmallMapRoad">#FFFFFF</item>
+        <item name="colorSmallMapAnimal">#F44336</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
