--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -23,6 +23,11 @@
         <item name="colorMapTechnical">#6C4E4E</item>
         <item name="colorMapTechnicalBorder">#0E141E</item>
 
+        <item name="colorSmallMapBackground">#6AAE86</item>
+        <item name="colorSmallMapBuilding">#5F7A6A</item>
+        <item name="colorSmallMapRoad">#FFFFFF</item>
+        <item name="colorSmallMapAnimal">#FF0000</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="android:windowLightStatusBar" tools:ignore="NewApi">false</item>
