--- a/presentation-catalogue/src/main/res/values/theme_attrs.xml
+++ b/presentation-catalogue/src/main/res/values/theme_attrs.xml
@@ -3,4 +3,5 @@
     <attr name="colorSmallMapBackground" format="color|reference" />
     <attr name="colorSmallMapBuilding" format="color|reference" />
     <attr name="colorSmallMapRoad" format="color|reference" />
+    <attr name="colorSmallMapAnimal" format="color|reference" />
 </resources>
