--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,7 +23,7 @@
         <item name="colorMapTechnical">#FFC9C9</item>
         <item name="colorMapTechnicalBorder">#D7DBDD</item>
 
-        <item name="colorSmallMapBackground">#6AAE86</item>
+        <item name="colorSmallMapBackground">#85BD9C</item>
         <item name="colorSmallMapBuilding">#5F7A6A</item>
         <item name="colorSmallMapRoad">#FFFFFF</item>
         <item name="colorSmallMapAnimal">#F44336</item>
