--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -26,7 +26,7 @@
         <item name="colorSmallMapBackground">#6AAE86</item>
         <item name="colorSmallMapBuilding">#5F7A6A</item>
         <item name="colorSmallMapRoad">#FFFFFF</item>
-        <item name="colorSmallMapAnimal">#FF0000</item>
+        <item name="colorSmallMapAnimal">#F44336</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
