--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -23,8 +23,8 @@
         <item name="colorMapTechnical">#6C4E4E</item>
         <item name="colorMapTechnicalBorder">#0E141E</item>
 
-        <item name="colorSmallMapBackground">#6AAE86</item>
-        <item name="colorSmallMapBuilding">#5F7A6A</item>
+        <item name="colorSmallMapBackground">#A1DAB8</item>
+        <item name="colorSmallMapBuilding">#768A7E</item>
         <item name="colorSmallMapRoad">#FFFFFF</item>
         <item name="colorSmallMapAnimal">#F44336</item>
 
