--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -20,7 +20,7 @@
         <item name="colorMapRoadVisited">#447C43</item>
         <item name="colorMapRoadBorder">#0E141E</item>
         <item name="colorMapTaken">?colorPrimary</item>
-        <item name="colorMapTechnical">#6C4E4E</item>
+        <item name="colorMapTechnical">#221717</item>
         <item name="colorMapTechnicalBorder">#0E141E</item>
 
         <item name="colorSmallMapBackground">#A1DAB8</item>
